# edictor

./: .gitignore  .zenodo.json  MANIFEST.in  README.md  RELEASING.md  about.html  base.html  check.html  cognates.html  cognatesets.html  config.json  contact.html  correspondences.html  customize.html  databases.html  edictor.html  glosses.html  help.html  index.html  ipachart1.html  ipachart2.html  ipachart3.html  ipachart4.html  ipachart5.html  morphology.html  patterns.html  phonobank.html  phonology.html  pyproject.toml  requirements.txt  select.html  server.py  settings.html  settings2.html  setup.cfg  setup.py  templates.html  test.html  test2.html  upload.html  (+1 more)
.github/workflows/: python-package.yml
cgi-scripts/: README.md  triples.py  updater.py
css/: bootstrap-theme.css  bootstrap.css  bs-excerpt.css  jquery-ui.css  wordlist.css
css/no-theme/: jquery-ui-1.10.4.custom.css
css/old/humanity/: jquery-ui-1.10.4.custom.css  jquery-ui-1.10.4.custom.min.css
css/old/no-theme/: jquery-ui-1.10.4.custom.css  jquery-ui-1.10.4.custom.min.css
css/old/no-theme/tmp/: jquery-ui-1.10.4.custom.css  jquery-ui-1.10.4.custom.min.css
css/old/start/: jquery-ui-1.10.4.custom.css
css/old/ui-lightness/tmp/: jquery-ui-1.10.4.custom.min.css
css/start/: jquery-ui-1.10.4.custom.min.css
css/ui-lightness/: jquery-ui-1.10.4.custom.min.css
css/ui-lightness/tmp/: jquery-ui-1.10.4.custom.css
data/: BAI.csv  BAI.tsv  BAIBAD.tsv  GER-alm.tsv  GER.tsv  GERL.tsv  German.tsv  IDS.tsv  JAP.tsv  OUG.tsv  PAN.tsv  SIN.tsv  Template.tsv  bai.tsv  burmish.tsv  burmish_test.tsv  filelist.csv  formats.tsv  lezgian_check.tsv  tukano.tsv
data/conceptlists/: Allen-2007-500.tsv  Comrie-1977-207.tsv  Starostin-1991-110.tsv  Swadesh-1952-200.tsv  Swadesh-1955-100.tsv
dighl/: main.js  setup.js
dighl/lib/: highlight.js  newick.js  sampa.js  utils.js
dighl/style/: dighl.css  jquery-ui.css  treelib.css
digling/: README.md  main.js
digling/lib/: features.js  highlight.js  multiple.js  pinyin.js
firefox-addon/: create-addon.sh
firefox-addon/edictor-winter/: background.js  manifest.json
help/: ipatterns.md  make_help.py  morphology.html  morphology.md  partial.html  patterns.html  patterns.md  phonology.html  phonology.md  sets.md  wordlist.md
js/: alignments.js  cognates.js  comments.js  correspondences.js  data.js  datatable.js  glosses.js  main.js  modules.js  morphology.js  partial.js  patterns.js  phonobank.js  phonology.js  segments.js  setup.js  starter.js  statistics.js  util.js  wltest.js  wordlist.js
js/dighl/: edit.js  highlight.js  main.js  sampa.js  sampax.js  setup.js
js/generic/: highlight.js
js/tmp/: autocomplete.js  jquery-ui-1.10.4.custom.js  jquery-ui-1.10.4.custom.min.js
js/tsv/: alignments.js  cognates.js  correspondences.js  morphology.js  partial.js  phonology.js  starter.js  util.js  wordlist.js
panels/: cognates.html  customize.html  forms.html  help.html  ialms.html  icognates.html  ipatterns.html  partial.html  patterns.html  phonology.html  sets.html  settings.html
plugouts/: ipa_chart.html  sigma.big.html  sigma.small.html  sigma.test.html  springy.small.html
plugouts/js/: phonobank.js
plugouts/springy/: demo.html
pyed/: template.py  util.py
sqlite/: deepadungpalaung.sqlite3  germanic.sqlite3
src/edictor/: __init__.py  cli.py  server.py  util.py  wordlist.py
src/edictor/app/: config.json  edictor.html  index.html
src/edictor/app/css/: bootstrap.css  bs-excerpt.css  main.css  wordlist.css
src/edictor/app/data/: Bai.tsv  German.tsv  Germanic.tsv  Tujia.tsv  correspondence-patterns.tsv  filelist.csv  morpheme-glosses.tsv
src/edictor/app/help/: cognates.html  cognates.md  forms.html  forms.md  ipatterns.html  morphology.html  morphology.md  partial.md  patterns.html  patterns.md  sets.html  wordlist.html  wordlist.md
src/edictor/app/js/: .jshintrc  alignments.js  cognates.js  correspondences.js  glosses.js  morphology.js  patterns.js  segments.js  starter.js  util.js  wordlist.js
src/edictor/app/panels/: about.html  contact.html  correspondences.html  forms.html  glosses.html  ialms.html  icognates.html  ipatterns.html  morphology.html  patterns.html  sets.html
src/edictor/app/plugouts/: ipa_chart.html  sigma_big.html  sigma_small.html  (+2 more)
tests/: config.json  test_cli.py  test_server.py  test_util.py  test_wordlist.py
tests/data/: germanic.sqlite3  germanicm.sqlite3  prep.py
tests/data/cldf/: README.md  StructureDataset-metadata.json  cldf-metadata.json  forms.csv  lingpy-rcParams.json  requirements.txt
tests/gui/alignments/: README.md
tests/gui/patterns/: Makefile  README.md
tests/selenium/: edictor-chrome.side  edictor-firefox.side
triples/: README.md  burmish.sqlite3  germanic.sqlite3  get_data.py  huber1992.sqlite3  sinotibetan.sqlite3  summary.py  template.py  triples.py  update.py
(+7 files in other folders)
