[metadata]
name = edictor
version = 3.0.alpha.1
author = Johann-Mattis List
author_email = mattis.list@uni-passau.de
description = Web-Based Tool for Computer-Assisted Language Comparison
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    linguistics
    sequence alignment
    computational linguistics
    dialectology
    cognate detection
license = MIT
license_files = LICENSE
url = https://edictor.org
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
edictor =
    data/*

[options.entry_points]
console_scripts =
    edictor = edictor.cli:main

[options.extras_require]
dev =
    build
    wheel
    twine
    tox
test =
    pytest
    pytest-cov
    coverage
    lingpy==2.6.13
    lexibase
lingpy =
    lingpy
    lingrex

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301,E731
max-line-length = 100
exclude = .tox,cython

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    edictor
    tests

[coverage:report]
show_missing = true
skip_covered = true


[tox:tox]
envlist = py38, py39, py310, py311
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
